chore: add Dockerfile